<resources>
    <string name="app_name">Contacts</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter email</string>
    <string name="phone">Enter phone number</string>
    <string name="phone_type">Enter phone type</string>
    <string name="txtName">Name: </string>
    <string name="txtEmail">Email: </string>
    <string name="txtPhone">Phone Number: </string>
    <string name="txtPhoneType">Phone Type: </string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>